--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
     
 <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
 <script>
+ 
+<script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
+<script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyBoULHPn7rdPxTA-WjGkNW_FTZ1wu5Wqok",
-    authDomain: "mukbang-c161a.firebaseapp.com",
-    databaseURL: "https://mukbang-c161a.firebaseio.com",
-    projectId: "mukbang-c161a",
-    storageBucket: "mukbang-c161a.appspot.com",
-    messagingSenderId: "730616664411"
+    apiKey: "AIzaSyATVwUe0v8F2V1zPaDbrLdbYl3I8dr6kNg",
+    authDomain: "mukbang-a3f89.firebaseapp.com",
+    databaseURL: "https://mukbang-a3f89.firebaseio.com",
+    projectId: "mukbang-a3f89",
+    storageBucket: "mukbang-a3f89.appspot.com",
+    messagingSenderId: "372543879678"
   };
   firebase.initializeApp(config);
 
-                
         // Check to see if you are logged in
         firebase.auth().onAuthStateChanged(function(user) {
             if (user == null) {
