--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ function closeNav() {
         
         <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="game.html"><h2>Tos</h2></a>
+  <a href="TOS.html"><h2>Tos</h2></a>
   <a href="AboutUsPage.html"><h2>Team</h2></a>
   <a href="HowToPlay.html"><h2>How to Use</h2></a>
 </div>
