--- a/sports.html
+++ b/sports.html
@@ -668,6 +668,7 @@ function closeNav() {
   <a href="TOS.html"><h2>Terms of Service</h2></a>
   <a href="AboutUsPage.html"><h2>Team</h2></a>
   <a href="HowToPlay.html"><h2>How to Use</h2></a>
+            <a href="Homepage.html"><h2>Homepage</h2></a>
 </div>
 
 
