--- a/index.html
+++ b/index.html
@@ -663,13 +663,14 @@ function closeNav() {
         
         <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-<<<<<<< HEAD
+
   <a href="TOS.html"><h2>Terms of Service</h2></a>
-=======
+
   <a href="tos.html"><h2>Tos</h2></a>
->>>>>>> bc8c32a21460ad5461a8e111df672a6f97775faa
+
   <a href="AboutUsPage.html"><h2>Team</h2></a>
-  <a href="HowToPlay.html"><h2>How to Use</h2></a>
+  <a href="Homepage.html"><h2>Homepage</h2></a>
+    
 </div>
 
 
