--- a/biz.html
+++ b/biz.html
@@ -820,7 +820,7 @@ background-color: 	#FFA07A;
                     mytab = mytab + "<tr>";
                     var date = new Date(data[u][t].time);
                     var time = date.toString();
-                   if(data[u][t].local == "gen"){ 
+                   if(data[u][t].local == "biz"){ 
                    if (data[u][t].img != null && data[u][t].img != "") {
                         mytab = mytab + "<td><img class = 'avatar' src='" + users[u].profile_picture + "' width='100px'></td>";
                         mytab = mytab + "<td><img class = 'zoom' src='" + data[u][t].img + "' width=200px' ></td>";
