--- a/biz.html
+++ b/biz.html
@@ -943,7 +943,7 @@ function closeNav() {
         
         <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="TOS.html"><h2>Terms of Service</h2></a>
+  <a href="tos.html"><h2>Terms of Service</h2></a>
   <a href="AboutUsPage.html"><h2>Team</h2></a>
   <a href="General.html"><h2>General</h2></a>
 <a href="index.html"><h2>Homepage1</h2></a>
