--- a/R/index.html
+++ b/R/index.html
@@ -10,7 +10,26 @@
            
 <head>
 <style>
-    
+ <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
+
+    <nav class="navbar navbar-expand-lg navbar-dark pb_navbar pb_scrolled-light" id="pb-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Landing</a>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#probootstrap-navbar" aria-controls="probootstrap-navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span><i class="ion-navicon"></i></span>
+        </button>
+        <div class="collapse navbar-collapse" id="probootstrap-navbar">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#section-features">Features</a></li>
+            <li class="nav-item"><a class="nav-link" href="#section-reviews">Reviews</a></li>
+            <li class="nav-item"><a class="nav-link" href="#section-pricing">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link" href="#section-faq">FAQ</a></li>
+            <li class="nav-item cta-btn ml-xl-2 ml-lg-2 ml-md-0 ml-sm-0 ml-0"><a class="nav-link" href="https://Mukbang/" target="_blank"><span class="pb_rounded-4 px-4">Get Started</span></a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>   
    
 body {
   background-image: url("mb1.jpg")
