--- a/R/NewHome.html
+++ b/R/NewHome.html
@@ -75,8 +75,15 @@
             <li data-target="#main-slider" data-slide-to="2"></li>
         </ol>
         -->
-        <div class="carousel-inner">
-            <div class="item active" style="background-image: url(images/slider/slide1.png)">
+         <div class="item">
+                <video id="video_background" preload="auto" autoplay loop="loop" muted="muted" controls>
+                 
+                    <source src="videos/vid2.mp4" type="video/mp4">
+                  
+                    Video not supported
+                </video>
+
+                <div id="video_pattern"></div>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
