--- a/R/NewHome.html
+++ b/R/NewHome.html
@@ -149,7 +149,7 @@
 						<div class="service-box service-fold">
 							<i class="hippo-icon-diamond"></i>
 
-							<h3>Web Developemnt</h3>
+							<h3>General</h3>
 
 							<p>
 								Contrary to popular belief, Lorem Ipsum is not simply random text.
@@ -160,7 +160,7 @@
 						<div class="service-box service-fold">
 							<i class="hippo-icon-lightbulb"></i>
 
-							<h3>Creative Idea</h3>
+							<h3>Entertainment</h3>
 
 							<p>
 								Contrary to popular belief, Lorem Ipsum is not simply random text.
@@ -171,7 +171,7 @@
 						<div class="service-box service-fold">
 							<i class="hippo-icon-beaker"></i>
 
-							<h3>Pro Solution</h3>
+							<h3>Sports</h3>
 
 							<p>
 								Contrary to popular belief, Lorem Ipsum is not simply random text.
@@ -182,7 +182,7 @@
 						<div class="service-box service-fold">
 							<i class="hippo-icon-pencil"></i>
 
-							<h3>Web Design</h3>
+							<h3>News</h3>
 
 							<p>
 								Contrary to popular belief, Lorem Ipsum is not simply random text.
@@ -193,44 +193,14 @@
 						<div class="service-box service-fold">
 							<i class="hippo-icon-paper-plane"></i>
 
-							<h3>UI/UX Design</h3>
+							<h3>Business</h3>
 
 							<p>
 								Contrary to popular belief, Lorem Ipsum is not simply random text.
 							</p>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12">
-						<div class="service-box service-fold">
-							<i class="hippo-icon-star"></i>
-
-							<h3>PSD to HTML</h3>
-
-							<p>
-								Contrary to popular belief, Lorem Ipsum is not simply random text.
-							</p>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12">
-						<div class="service-box service-fold">
-							<i class="hippo-icon-heart"></i>
-
-							<h3>Branding</h3>
-
-							<p>
-								Contrary to popular belief, Lorem Ipsum is not simply random text.
-							</p>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12">
-						<div class="service-box service-fold">
-							<i class="hippo-icon-photo"></i>
-
-							<h3>Illustration</h3>
-
-							<p>
-								Contrary to popular belief, Lorem Ipsum is not simply random text.
-							</p>
+					
 						</div>
 					</div>
 				</div>
