--- a/R/NewHome.html
+++ b/R/NewHome.html
@@ -189,7 +189,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12">
+					<center><div class="col-md-3 col-sm-6 col-xs-12">
 						<div class="service-box service-fold">
 							<i class="hippo-icon-paper-plane"></i>
 
@@ -199,7 +199,7 @@
 								Contrary to popular belief, Lorem Ipsum is not simply random text.
 							</p>
 						</div>
-					</div>
+                        </div></center>
 					
 						</div>
 					</div>
