--- a/R/NewHome.html
+++ b/R/NewHome.html
@@ -167,6 +167,7 @@
 							</p>
 						</div>
 					</div>
+                    <i href="sports.html">
 					<div class="col-md-3 col-sm-6 col-xs-12">
 						<div class="service-box service-fold">
 							<i class="hippo-icon-beaker"></i>
