--- a/R/NewHome.html
+++ b/R/NewHome.html
@@ -175,7 +175,7 @@
 
 							<h3>Sports</h3>
                             
-                                <i href="sports.html">
+                                <a href="sports.html">
 
 							<p>
 								Contrary to popular belief, Lorem Ipsum is not simply random text.
