--- a/R/index.html
+++ b/R/index.html
@@ -762,7 +762,7 @@
         <div class="team-item-description">
             <div class="description">
                 <h3>
-                    Amili milton
+                    Nolan
                 </h3>
                 <h4>
                     Designer
