--- a/R/index.html
+++ b/R/index.html
@@ -717,7 +717,7 @@
         <div class="team-item-description">
             <div class="description">
                 <h3>
-                    Amili milton
+                    Peter
                 </h3>
                 <h4>
                     Founder
@@ -807,7 +807,7 @@
         <div class="team-item-description">
             <div class="description">
                 <h3>
-                    Amili milton
+                    Ayden
                 </h3>
                 <h4>
                     Developer
