--- a/R/index.html
+++ b/R/index.html
@@ -537,7 +537,7 @@
         <div class="team-item-description">
             <div class="description">
                 <h3>
-                    Amili milton
+                    Peter
                 </h3>
                 <h4>
                     Founder
@@ -577,12 +577,12 @@
 <li class="team-member">
     <div>
         <div class="img-wrapper">
-            <img class="img-responsive" src="images/team/2.jpg" alt="">
+            <img class="img-responsive" src="images/team/2.png" alt="">
         </div>
         <div class="team-item-description">
             <div class="description">
                 <h3>
-                    Amili milton
+                    Nolan
                 </h3>
                 <h4>
                     Designer
@@ -627,7 +627,7 @@
         <div class="team-item-description">
             <div class="description">
                 <h3>
-                    Amili milton
+                    Ayden
                 </h3>
                 <h4>
                     Developer
@@ -665,49 +665,7 @@
         </div>
     </div>
 </li>
-    <div>
-        <div class="img-wrapper">
-            <img class="img-responsive" src="images/team/4.jpg" alt="">
-        </div>
-        <div class="team-item-description">
-            <div class="description">
-                <h3>
-                    Amili milton
-                </h3>
-                <h4>
-                    Programmer
-                </h4>
-            </div>
-            <div class="social social-shares">
-                <ul>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-twitter">
-                            </i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-facebook">
-                            </i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-dribbble">
-                            </i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-google-plus">
-                            </i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+    
 </li>
 <li class="team-member">
     <div>
