--- a/R/index.html
+++ b/R/index.html
@@ -142,7 +142,7 @@
     <div id="services">
         <div class="inner-wrapper">
 			<div class="container">
-				<h2>Check out our <span>Services</span></h2>
+				<h2> <span>Twitter Websites</span></h2>
 
 				<div class="row">
 					<div class="col-md-3 col-sm-6 col-xs-12">
@@ -435,80 +435,7 @@
 
 <!-- About us
 ================================================== -->
-<div id="aboutus-wrapper">
-    <div id="aboutus">
-        <div class="inner-wrapper">
-            <div class="row">
-                <div class="container">
-                    <h2>Read more <span> About us</span></h2>
 
-                    <div class="row contents">
-                        <div class="col-md-6">
-                            <p> On the other hand, we denounce with righteous indignation and dislike men who are
-                                so
-                                beguiled and demoralized by the charms of pleasure of the moment, so blinded by
-                                desire,
-                                that they cannot foresee the pain and trouble that are bound to ensue; and equal
-                                blame
-                                belongs to those who fail in their duty through weakness of will, which is the same
-                                as
-                                saying through shrinking from toil and pain. </p>
-
-                            <p> These cases are perfectly simple and easy to distinguish. In a free hour, when our
-                                power
-                                of choice is untrammelled and when nothing prevents our being able to do what we
-                                like
-                                best,</p>
-
-                            <p> every pleasure is to be welcomed and every pain avoided. But in certain
-                                circumstances
-                                and owing to the claims of duty or the obligations of business it will frequently
-                                occur
-                                that pleasures have to be repudiated and annoyances accepted. The wise man
-                                therefore
-                                always holds in these matters to this principle of selection: he rejects pleasures
-                                to
-                                secure other greater pleasures, or else he endures pains to avoid worse pains.</p>
-                        </div>
-                        <div class="col-md-6">
-                            <h3>Our Skills</h3>
-
-                            <p> every pleasure is to be welcomed and every pain avoided. But in certain
-                                circumstances
-                                and
-                                owing to the claims of duty or the obligations of business it will frequently occur
-                                that
-                                pleasures have to be repudiated</p>
-
-                            <div class="progress-bars">
-                                <div class="skill-progress" data-skill="75%">CSS</div>
-                                <div class="skill-progress" data-skill="60%">HTML</div>
-                                <div class="skill-progress" data-skill="90%">PHP</div>
-                                <div class="skill-progress" data-skill="55%">Photoshop</div>
-                            </div>
-                            <div class="connect">
-                                <h3>Connect with us</h3>
-
-                                <div class="social-shares">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-tumblr"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!--/#about-us-->
 
 
 <!-- Team
@@ -1087,75 +1014,7 @@
 </div>
 <!--/#blog-->
 
-<!-- Contact
-================================================== -->
-<div id="contact-wrapper">
-    <div id="contact">
-        <div class="inner-wrapper">
-            <div class="row">
-                <div class="container">
-                    <h2><span>Contact us</span> Now</h2>
 
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div id="map-canvas"></div>
-                            <div class="contact-info">
-                                <ul>
-                                    <li class="first">
-                                        <p><i class="fa fa-map-marker fa-2"></i> Mukbang inc.</p>
-
-                                        <p> 9870 St Vincent Place, Glasgow, DC 45 Fr 45.</p>
-                                    </li>
-                                    <li class="second">
-                                        <p><i class="fa fa-phone fa-2"></i> +0088776 69 900</p>
-
-                                        <p><i class="fa fa-envelope fa-2"></i> main@example.com </p>
-                                    </li>
-                                    <li class="third">
-                                        <p><i class="fa fa-clock-o fa-2"></i> Monday - Friday</p>
-
-                                        <p> 9:00 AM - 6:00 AM</p>
-                                    </li>
-                                </ul>
-                                <div class="clearfix"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="message-box">
-                                <h3>Send Message</h3>
-
-                                <form method="post" action="#">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" placeholder="Name">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <input type="email" class="form-control" placeholder="Email">
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <textarea class="form-control" placeholder="Message"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <input type="submit" class="readmore send-button"
-                                                   value="Send Message">
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!--/#contact-wrapper-->
 </div>
 <!--/.body-wrapper-->
 
