got rid of cookies

--- a/R/index.html
+++ b/R/index.html
@@ -551,7 +551,7 @@
             </div>
             <div class="col-xs-6">
                 <div class="copyright">
-                    <p>Copyright &copy; 2013 Mukbang / Design by <a href="https://uicookies.com">uiCookies</a>
+                    <p>Copyright &copy; 2069 Mukbang</p>
                 </div>
             </div>
         </div>
