--- a/R/index.html
+++ b/R/index.html
@@ -47,7 +47,6 @@
                     <ul class="nav navbar-nav navbar-left">
                         <li class="active home"><a href="#main-slider"> Home</a></li>
                         <li class="service"><a href="#services-wrapper">Services</a></li>
-                       
                         <li class="team"><a href="#team-wrapper">Team</a></li>
                         <li class="client"><a href="#client-wrapper">Clients</a></li>
              
@@ -105,8 +104,7 @@
                         <div class="col-sm-12">
                             <div class="carousel-content centered">
 
-                                <h2 class="animation animated-item-1"> <span>Peter,
-                                    Nolan And Ayden The Best Trio Out There</span></h2>
+                                <h2 class="animation animated-item-1"> <span>A great man is always willing to be little</span></h2>
 
                                 <h2 class="animation animated-item-2">You Have Ever Seen</h2>
 
