--- a/R/index.html
+++ b/R/index.html
@@ -143,7 +143,7 @@
 
 				<div class="row">
 					<div class="col-md-3 col-sm-6 col-xs-12">
-                        <a href="gen.html">
+                        <a href="General.html">
 						<div class="service-box service-fold">
 							<i class="hippo-icon-lightbulb"></i>
 
