--- a/sports.html
+++ b/sports.html
@@ -1,7 +1,7 @@
 <html>
 <style>  
 body {
-            background-image: url(backimg.jpeg);
+            background-color: aliceblue
         }
         
         
