--- a/sports.html
+++ b/sports.html
@@ -330,8 +330,8 @@ firebase.initializeApp(config);
         // Check to see if you are logged in
         firebase.auth().onAuthStateChanged(function(user) {
             if (user == null) {
-                //alert("Not logged in.");
-                window.location.replace("signin.html");
+                alert("Not logged in.");
+                
                 return;
             } else {
                 userId = user.uid;
