--- a/sports.html
+++ b/sports.html
@@ -1251,7 +1251,7 @@ firebase.initializeApp(config);
     </script>
 
 <body>
-<center><button class="btn-gradient red mini" onclick="signin()">Sign in</button></center>    
+<center><button class="btn-gradient red mini" onclick="signin()">Log In</button></center>    
     
 <div class="navbar">
   <div class="dropdown">
