Revert "Update sports.html"
This reverts commit 350c08ef60603049bcb723276ecfae86bc32fbed.

--- a/sports.html
+++ b/sports.html
@@ -557,10 +557,10 @@ firebase.initializeApp(config);
       <i id="myphoto"></i>
     </button>
     <div class="dropdown-content">
-    <a href="#" onclick="signout()">Log out</a>
+    <a href="#" onclick="signout()">Sign out</a>
     <a href="about.html">About</a>
     <a href="search.html">Search</a>
-    
+    <a href="profile.html">Profile</a>
     </div>
  </div>
     <p style="padding-top: 10px" id="mydata"></p>
