--- a/biz.html
+++ b/biz.html
@@ -966,7 +966,7 @@ function closeNav() {
   <a href="tos.html"><h2>Terms of Service</h2></a>
   <a href="AboutUsPage.html"><h2>Team</h2></a>
   <a href="General.html"><h2>General</h2></a>
-<a href="profile.html"><h2>Profile</h2></a>
+<a href="Profile.html"><h2>Profile</h2></a>
 <a href="index.html"><h2>Homepage1</h2></a>
 </div>
 
