--- a/biz.html
+++ b/biz.html
@@ -926,7 +926,10 @@ function closeNav() {
 
     <body>
     <center>
+        
         <i style="absolute-right" id="myphoto"></i>
+        <i style="absolute-right" id="newname"></i>
+        
         <center><button class="btn-gradient red mini" onclick="signin()">Log In</button></center> 
   <center><button class="btn-gradient red mini" onclick="signout()">Log Out</button></center> 
       <form>
