--- a/biz.html
+++ b/biz.html
@@ -927,7 +927,7 @@ function closeNav() {
     <body>
     <center>
         
-        <i style="absolute-right" id="myphoto"></i>
+        <i style="absolute-right" id="inputFileToLoad"></i>
         <i style="absolute-right" id="newname"></i>
         
         <center><button class="btn-gradient red mini" onclick="signin()">Log In</button></center> 
