--- a/biz.html
+++ b/biz.html
@@ -927,8 +927,8 @@ function closeNav() {
     <body>
     <center>
         
-        <i style="absolute-right" id="inputFileToLoad"></i>
-        <i style="absolute-right" id="newname"></i>
+        <i style="absolute-right" id="chosenImg"></i>
+        <i style="absolute-right" id="newName"></i>
         
         <center><button class="btn-gradient red mini" onclick="signin()">Log In</button></center> 
   <center><button class="btn-gradient red mini" onclick="signout()">Log Out</button></center> 
