--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					<div class="col-md-3 col-sm-6 col-xs-12">
                         <a href="General.html">
 						<div class="service-box service-fold">
-							<i class="hippo-icon-lightbulb"></i>
+							<i class="hippo-icon-light"></i>
 
 							<h3>General</h3>
 
@@ -171,7 +171,7 @@
 					<div class="col-md-3 col-sm-6 col-xs-12">
                         <a href="sports.html">
 						<div class="service-box service-fold">
-							<i class="hippo-icon-soccer-ball"></i>
+							<i class="hippo-icon-ball"></i>
                             
 
 							<h3>Sports</h3>
