--- a/index.html
+++ b/index.html
@@ -371,7 +371,23 @@
     </div>
 </li>
     
+</li>
 
+
+
+</ul>
+<div class="clearfix">
+</div>
+</div>
+<div class="team-directions">
+                <span class="prev-items rounded">
+                  <i class="fa fa-angle-left">
+                  </i>
+                </span>
+                <span class="next-items rounded">
+                  <i class="fa fa-angle-right">
+                  </i>
+                </span>
 </div>
 </div>
 </div>
