--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                         <div class="col-sm-12">
                             <div class="carousel-content centered">
 
-                                <h2 class="animation animated-item-1"> <span>A great man is always willing to be little</span></h2>
+                                <h2 class="animation animated-item-1"> <span></span></h2>
 
-                                <h2 class="animation animated-item-2">You Have Ever Seen</h2>
+                                <h2 class="animation animated-item-2"></h2>
 
                                 <br>
                                 <span class="content-nav">
