--- a/biz.html
+++ b/biz.html
@@ -970,7 +970,7 @@ function closeNav() {
         <br><h2>Video Link:<h2>
        <center><input placeholder="YouTube Link" class=input id="vidFileID" type="text"/></center>
  
-         </form>
+         <form>
 
         <button  class="btn-gradient red mini" type="button" onclick="tweet()">Submit</button>
     
